--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --include \"src/app/**/*.spec.ts\" && jest --verbose --coverage src/server",
     "dev:ssr": "ng run portfolio:serve-ssr",
     "serve:ssr": "node dist/portfolio/server/main.js",
     "build:ssr": "ng build && ng run portfolio:server",
@@ -24,7 +24,9 @@
     "@angular/platform-server": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@nguniversal/express-engine": "^15.2.0",
+    "dotenv": "^16.0.3",
     "express": "^4.15.2",
+    "postgres": "^3.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -36,14 +38,17 @@
     "@nguniversal/builders": "^15.2.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "^14.15.0",
     "jasmine-core": "~4.5.0",
+    "jest": "^29.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "karma-spec-reporter": "^0.0.36",
+    "ts-jest": "^29.0.5",
     "typescript": "~4.9.4"
   }
 }
