--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:ssr": "ng run portfolio:serve-ssr",
     "serve:ssr": "node dist/portfolio/server/main.js",
     "build:ssr": "ng build && ng run portfolio:server",
+    "watch:ssr": "nodemon -w server.ts -w src -e json,ts,html,scss --exec \"npm run build:ssr && npm run serve:ssr\"",
     "prerender": "ng run portfolio:prerender"
   },
   "private": true,
@@ -40,6 +41,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^14.15.0",
+    "@types/pg": "^8.6.6",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
     "karma": "~6.4.0",
@@ -48,6 +50,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "karma-spec-reporter": "^0.0.36",
+    "nodemon": "^2.0.21",
     "ts-jest": "^29.0.5",
     "typescript": "~4.9.4"
   }
