--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:ssr": "ng run portfolio:serve-ssr",
     "serve:ssr": "node dist/portfolio/server/main.js",
     "build:ssr": "ng build && ng run portfolio:server",
-    "watch:ssr": "nodemon -w server.ts -w src -e json,ts,html,scss --exec \"npm run build:ssr && npm run serve:ssr\"",
+    "watch:ssr": "nodemon -w schema.graphqls -w server.ts -w src -e json,ts,html,scss --exec \"npm run build:ssr && npm run serve:ssr\"",
     "prerender": "ng run portfolio:prerender"
   },
   "private": true,
@@ -27,6 +27,7 @@
     "@nguniversal/express-engine": "^15.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.15.2",
+    "graphql": "^16.6.0",
     "postgres": "^3.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
