Setup environment to be able to run over cloudflare tunnel

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --include \"src/app/**/*.spec.ts\" && jest --verbose --coverage src/server",
+    "test:frontend": "ng test --include \"src/app/**/*.spec.ts\"",
+    "test:backend": "jest --verbose --coverage --runInBand src/server",
+    "test": "npm run test:frontend && npm run test:backend",
     "dev:ssr": "ng run portfolio:serve-ssr",
     "serve:ssr": "node dist/portfolio/server/main.js",
     "build:ssr": "ng build && ng run portfolio:server",
