--- a/package.json
+++ b/package.json
@@ -26,16 +26,18 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/platform-server": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@apollo/client": "^3.0.0",
     "@nguniversal/express-engine": "^15.2.0",
     "apollo-angular": "^4.2.1",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "dotenv": "^16.0.3",
     "express": "^4.15.2",
     "graphql": "^16.6.0",
     "postgres": "^3.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "@apollo/client": "^3.0.0"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.1",
