--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^14.15.0",
     "@types/pg": "^8.6.6",
+    "@types/supertest": "^2.0.12",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
     "karma": "~6.4.0",
@@ -58,6 +59,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "karma-spec-reporter": "^0.0.36",
     "nodemon": "^2.0.21",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "typescript": "~4.9.4"
   }
